# local-ai-dictation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  transcriber.py
.pi/plans/specs/: 7abfbf14.md
.ralph/: items.json  loop.md  plan.md  progress.md  prompt.md
desktop/electrobun/: .gitignore  README.md  electrobun.config.ts  package.json  tsconfig.json
desktop/electrobun/src/bun/: index.ts
desktop/electrobun/src/mainview/: index.css  index.html  index.ts
sdk/: electrobun.md
src/local_ai_dictation/: __init__.py  audio.py  backend_state.py  benchmark.py  bridge.py  cli.py  config.py  desktop.py  dictation.py  doctor.py  errors.py  model.py  output.py  types.py  whisper.py
src/parakeet/: __init__.py  audio.py  benchmark.py  bridge.py  cli.py  config.py  desktop.py  dictation.py  doctor.py  errors.py  model.py  output.py  types.py
tests/: conftest.py  test_backend_state.py  test_benchmark.py  test_bridge.py  test_config.py  test_desktop.py  test_devices.py  test_doctor.py  test_model.py  test_normalization.py  test_output.py  test_vad.py  test_verification_suite.py
