[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-dictation"
version = "0.1.0"
description = "Local AI Dictation for Linux and optional WSL workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Local AI Dictation" }]
dependencies = [
  "nemo_toolkit[asr]",
  "faster-whisper",
  "numpy<2.0",
  "pyaudio",
  "pyperclip",
  "webrtcvad-wheels",
  "ml-dtypes==0.5.4; python_version < '3.13'",
  "tomli>=2; python_version < '3.11'",
]

[project.scripts]
local-ai-dictation = "local_ai_dictation.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
